--- a/csgo-server-launcher.conf
+++ b/csgo-server-launcher.conf
@@ -20,7 +20,7 @@ DIR_LOGS="$DIR_GAME/logs"
 DAEMON_GAME="srcds_run"
 
 UPDATE_LOG="$DIR_LOGS/update_`date +%Y%m%d`.log"
-UPDATE_EMAIL=""
+UPDATE_EMAIL="ot7oman@hotmail.com"
 UPDATE_RETRY=3
 
 # Workshop : https://developer.valvesoftware.com/wiki/CSGO_Workshop_For_Server_Operators
@@ -29,8 +29,8 @@ WORKSHOP_COLLECTION_ID="125499818" # http://steamcommunity.com/sharedfiles/filed
 WORKSHOP_START_MAP="125488374" # http://steamcommunity.com/sharedfiles/filedetails/?id=125488374
 
 # Game config
-MAXPLAYERS="18"
-TICKRATE="64"
+MAXPLAYERS="20"
+TICKRATE="128"
 EXTRAPARAMS="-nohltv +sv_pure 0 +game_type 0 +game_mode 0 +mapgroup mg_bomb +map de_dust2"
 
 # Major settings
