--- a/csgo-server-launcher.conf
+++ b/csgo-server-launcher.conf
@@ -3,18 +3,18 @@
 
 SCREEN_NAME="csgo"
 USER="steam"
-IP="198.51.100.0"
+IP="164.132.4.245"
 PORT="27015"
 
 # Anonymous connection will be deprecated in the near future. Therefore it is highly recommended to generate a Game Server Login Token.
 GSLT="" # http://steamcommunity.com/dev/managegameservers
 
-DIR_STEAMCMD="/var/steamcmd"
+DIR_STEAMCMD="/home/pp-paruni_c5tdc/public/steamcmd"
 STEAM_LOGIN="anonymous"
 STEAM_PASSWORD="anonymous"
 STEAM_RUNSCRIPT="$DIR_STEAMCMD/runscript_$SCREEN_NAME"
 
-DIR_ROOT="$DIR_STEAMCMD/games/csgo"
+DIR_ROOT="/home/pp-paruni_c5tdc/public/"
 DIR_GAME="$DIR_ROOT/csgo"
 DIR_LOGS="$DIR_GAME/logs"
 DAEMON_GAME="srcds_run"
